chenged gunicorn config

--- a/config/gunicorn.conf
+++ b/config/gunicorn.conf
@@ -1,3 +1,6 @@
-bind = "127.0.0.1:8081"
-workers = 2
-worker_class = "aiohttp.worker.GunicornWebWorker"
+import os
+
+
+bind = '0.0.0.0:%s' % os.environ['PORT']
+worker_class = 'aiohttp.worker.GunicornWebWorker'
+access_log_format = '%a %l %u "%r" %s %b "%{Referrer}i" "%{User-Agent}i"'
