--- a/config/gunicorn.conf
+++ b/config/gunicorn.conf
@@ -1,5 +1,5 @@
 import os
 
-bind = '0.0.0.0:%s' % os.environ['PORT']
+bind = 'localhost:%s' % os.environ['PORT']
 worker_class = 'aiohttp.worker.GunicornWebWorker'
 access_log_format = '%a %l %u "%r" %s %b "%{Referrer}i" "%{User-Agent}i"'
